apps/immich/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: immich
  namespace: immich
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`photos.terminus.home.arpa`)
      kind: Rule
      services:
        - name: immich-server
          port: 2283
  tls:
    secretName: immich-tls
